# chaterbox

./: .flake8  .gitignore  Dockerfile  package-lock.json  package.json
backend/: .flake8  pyproject.toml
backend/app/: __main__.py  avatar.py  chat.py  database.py  db.py  logger.py  main.py  models.py  utils.py
backend/app/routes/: messages.py  user.py
backend/app/sockets/: __init__.py  sock_manager.py
backend/chaterbox/: main.py
frontend/: package.json  socket.ts  types.ts  utils.ts
frontend/components/: ChatBody.tsx  Contact.jsx  Login.jsx  Login.tsx  Message.tsx
frontend/pages/: chat.jsx  chat.tsx  index.tsx
frontend/src/: index.css  socket.ts  utils.ts
frontend/src/components/: App.jsx  Chatroom.jsx  Contact.jsx  Login.jsx
frontend/styles/: globals.css
public/: index.html
scripts/: run.sh
src/: index.css  utils.js
src/components/: Chatroom.jsx  Login.jsx
templates/: route.py
